--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -9,7 +9,7 @@
       var d = document, s = d.createElement('script');
 
       // Change `aspirethemes-demos` with your Disqus shortcode
-      s.src = '//aspirethemes-demos.disqus.com/embed.js';
+      s.src = '{{ site.baseurl }}';
 
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
