--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <script src="{{ '/js/evil-icons.min.js' | prepend: site.baseurl }}">   </script>
   <script src="{{ '/js/jquery.fitvids.js' | prepend: site.baseurl }}">   </script>
   <script src="{{ '/js/app.js' | prepend: site.baseurl }}">              </script>
-  <script src="{{ '/js/embed.js' | prepend: site.baseurl }}">              </script>
+  <!-- <script src="{{ '/js/embed.js' | prepend: site.baseurl }}">              </script> -->
 </body>
 
 </html>
