--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             </label>
           </div>
 
-          <div class='o-grid__col o-grid__col--1-4-s'>
+          <!-- <div class='o-grid__col o-grid__col--1-4-s'>
             <div class='c-off-canvas-content'>
               <label class='js-off-canvas-toggle c-off-canvas-toggle c-off-canvas-toggle--close'>
                 <span class='c-off-canvas-toggle__icon'></span>
@@ -27,7 +27,7 @@
                 {% include navigation.html %}
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
