--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <div class='o-grid'>
           <div class='o-grid__col o-grid__col--3-4-s'>
             <div class='c-logo u-text-left'>
-              <a class='c-logo__link' href='{{ site.baseurl }}/'>{{ site.title }}</a>
+              <a class='c-logo__link' href='{{ site.baseurl }}'>{{ site.title }}</a>
             </div>
           </div>
 
