Fix logo link error

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <div class='o-grid'>
           <div class='o-grid__col o-grid__col--3-4-s'>
             <div class='c-logo u-text-left'>
-              <a class='c-logo__link' href='{{ site.baseurl }}'>{{ site.title }}</a>
+              <a class='c-logo__link' href='http://mp.weixin.qq.com/profile?src=3&timestamp=1638017887&ver=1&signature=ijXLEiNm4xA58SBcwtUNV0pI6Hkm*R50VyPKE*SlcvQ-h87J7UPyliFE7saUmfW66v7WV0B56HT0xdRCAD*i7Q=='>{{ site.title }}</a>
             </div>
           </div>
 
