feat: increase font size

--- a/docs/stylesheets/ziti.css
+++ b/docs/stylesheets/ziti.css
@@ -6,6 +6,7 @@ https://chinese-font.netlify.app/zh-cn/fonts/hwmct/汇文明朝体
 @import url('https://fontsapi.zeoseven.com/292/main/result.css');
 body {
 font-family: "LXGW WenKai";
+font-size: 18px;
 font-weight: normal;
 } 
 
