--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -1,9 +1,17 @@
 {% if page.meta.comments %}
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <!-- Insert generated snippet here -->
-    <script src="https://giscus.app/client.js" data-repo="SWHL/SWHL.github.io" data-repo-id="R_kgDOGcXK0A"
-        data-category="Q&A" data-category-id="DIC_kwDOGcXK0M4C0lQp" data-mapping="url" data-strict="0"
-        data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="preferred_color_scheme"
+    <script src="https://giscus.app/client.js"
+        data-repo="SWHL/SWHL.github.io"
+        data-repo-id="R_kgDOGcXK0A"
+        data-category="Q&A"
+        data-category-id="DIC_kwDOGcXK0M4C0lQp"
+        data-mapping="url"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="https://cdn.jsdelivr.net/gh/L33Z22L11/giscus-theme/lxgw-wenkai.css"
         data-lang="zh-CN" data-loading="lazy" crossorigin="anonymous" async>
     </script>
 
