--- a/overrides/partials/content.html
+++ b/overrides/partials/content.html
@@ -39,9 +39,9 @@
 
 {% if page.file.src_path != "index.md" %}
 <p class="rss-footer">
-    <em>
-        本文首发于 <a href="{{ config.site_url }}">swhl.github.io</a>，
-        欢迎通过 <a href="{{ config.site_url }}/feed_rss_created.xml">RSS</a> 订阅更新。
+    <em style="font-size: 0.85em;">
+      本文首发于 <a href="{{ config.site_url }}">swhl.github.io</a>，
+      欢迎通过 <a href="{{ config.site_url }}/feed_rss_created.xml">RSS</a> 订阅更新。
     </em>
 </p>
 {% endif %}
